Added contact form, instagram and styling fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1238,6 +1238,12 @@ input, select, textarea {
 /* Header */
 
 	#header {
+		margin: 0;
+		position: absolute;
+		top: 50%;
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+		
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
