--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1317,6 +1317,9 @@ input, select, textarea {
 		}
 
 			#header .content .inner {
+				margin-left: 350px;
+				margin-right: 350px;
+				
 				-moz-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
 				-webkit-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
 				-ms-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
